--- a/renderer/index.html
+++ b/renderer/index.html
@@ -17,13 +17,20 @@
     </section>
     <main class="app-body">
       <aside class="directory-panel">
-        <h2>文件夹</h2>
-        <p id="current-root" class="current-root">尚未选择目录</p>
-        <div class="filter-section">
-          <h3>标签筛选</h3>
-          <div id="filter-tag-list" class="filter-tag-list"></div>
+        <div class="directory-panel-header">
+          <h2>文件夹</h2>
+          <p id="current-root" class="current-root">尚未选择目录</p>
         </div>
-        <ul id="directory-list" class="directory-list"></ul>
+        <div class="directory-columns">
+          <section class="tag-column">
+            <h3>标签筛选</h3>
+            <div id="filter-tag-list" class="filter-tag-list"></div>
+          </section>
+          <section class="folder-column">
+            <h3>子文件夹</h3>
+            <ul id="directory-list" class="directory-list"></ul>
+          </section>
+        </div>
       </aside>
       <section class="media-panel">
         <div class="media-panel-header">
