Enable scrolling within media panel

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -37,7 +37,9 @@
           <h2 id="media-heading">媒体</h2>
           <span id="media-count" class="media-count"></span>
         </div>
-        <div id="media-grid" class="media-grid"></div>
+        <div class="media-panel-content">
+          <div id="media-grid" class="media-grid"></div>
+        </div>
       </section>
     </main>
     <script src="renderer.js" type="module"></script>
