feat: allow opening directories in system explorer

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -34,8 +34,18 @@
       </aside>
       <section class="media-panel">
         <div class="media-panel-header">
-          <h2 id="media-heading">媒体</h2>
-          <span id="media-count" class="media-count"></span>
+          <div class="media-heading-group">
+            <h2 id="media-heading">媒体</h2>
+            <span id="media-count" class="media-count"></span>
+          </div>
+          <button
+            id="open-directory"
+            class="open-directory-button"
+            type="button"
+            disabled
+          >
+            在资源管理器中打开
+          </button>
         </div>
         <div class="media-panel-content">
           <div id="media-grid" class="media-grid"></div>
