Add progress indicator for large media loads

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -48,6 +48,20 @@
           </button>
         </div>
         <div class="media-panel-content">
+          <div
+            id="media-progress"
+            class="media-progress"
+            hidden
+            aria-live="polite"
+          >
+            <div class="media-progress-bar">
+              <div
+                id="media-progress-bar"
+                class="media-progress-bar-fill"
+              ></div>
+            </div>
+            <span id="media-progress-label" class="media-progress-label"></span>
+          </div>
           <div id="media-grid" class="media-grid"></div>
         </div>
       </section>
